<resources>
    <string name="app_name" translate="false">Common Data Service</string>
    <string name="service_name" translate="false">CDS Service</string>
    <string name="cds_common_info" translate="false">CDS Information</string>
    <string name="cds_wifi_info" translate="false">Wi-Fi Information</string>
    <string name="cds_radio_info" translate="false">Radio Information</string>
    <string name="cds_radio_menu_info" translate="false">Phone Information</string>
    <string name="cds_common_tab_framework" translate="false">CDS Framework Information</string>
    <string name="cds_common_tab_native" translate="false">CDS Native Information</string>
    <string name="cds_tether_info" translate="false">CDS Tether Information</string>
    <string name="cds_traffic_info" translate="false">CDS Traffic Information</string>
    <string name="cds_connectivity_info" translate="false">Connectivity Server</string>
    <string name="cds_connectivity_mtu" translate="false">CDS MTU Configuration</string>
    <string name="cds_utility_info" translate="false">Network Utility</string>
    <string name="cds_pdp_info" translate="false">Multiple APN</string>
    <string name="cds_check_apn" translate="false">Check APN</string>
    <string name="cds_refresh_apn" translate="false">Refresh Status</string>
    <string name="cds_reset_apn" translate="false">Quit</string>
    <string name="cds_socket_info" translate="false">Listening Socket Information</string>
    <string name="cds_ds_info" translate="false">CDS Background Data Usage</string>
    <string name="btn_refresh" translate="false">Refresh</string>
    <string name="btn_snapshot" translate="false">Snapshot</string>
    <string name="btn_exit" translate="false">Exit</string>
    <string name="btn_clear" translate="false">Clear</string>
    <string name="warning" translate="false">Warning</string>
    <string name="announce" translate="false">[Only record background data]</string>
    <string name="network_utility_hint" translate="false">[Support SHELL/PING/DNS/HTTP commands]</string>
    <string name="sys_property_hint" translate="false">[Set/Get System Property - AID_SYSTEM]</string>
    <string name="sys_get_button" translate="false">Get</string>
    <string name="sys_set_button" translate="false">Set</string>
    <string name="multi_apn_hint" translate="false">[Start/Stop APN data connections]</string>
    <string name="connectivity_inet_hint" translate="false">[Report INET connection]</string>
    <string name="connectivity_change_delay" translate="false">[Connectivity Intent Change Delay - Unit: ms]</string>
    <string name="connectivity_captive_portal" translate="false">[Captive portal detection setting]</string>
    <string name="connectivity_captive_portal_setting" translate="false">Captive portal detection</string>
    <string name="tethering_dun_apn_label" translate="false">DUN APN Setting:</string>
    <string name="tethering_test_label" translate="false">Tethering UDP testing</string>
    <string name="dun_apn_button" translate="false">Config APN</string>
    <string name="active_network_info_label" translate="false">Active Network Info</string>
    <string name="active_link_properties_label" translate="false">Active Network Link Properties</string>
    <string name="active_network_quota_info_label" translate="false">Active Network Quota information</string>
    <string name="network_infos_label" translate="false">Network Information List</string>
    <string name="network_policy_label" translate="false">Network Policy</string>
    <string name="network_list_label" translate="false">Network Interface List</string>
    <string name="network_config_label" translate="false">Network Config</string>
    <string name="ip_route_label" translate="false">IP Routing Table</string>
    <string name="ip_v6_route_label" translate="false">IPv6 Routing Table</string>
    <string name="ip_rule_label" translate="false">IP Rule Table</string>
    <string name="net_stat_label" translate="false">Active IP connections</string>
    <string name="tether_info_label" translate="false">Tether information</string>
    <string name="traffic_info_label" translate="false">Traffic information</string>
    <string name="traffic_mobile_info_label" translate="false">Mobile Traffic Information</string>
    <string name="ccmni0_info_label" translate="false">ccmni0 information</string>
    <string name="ccmni1_info_label" translate="false">ccmni1 information</string>
    <string name="ccmni2_info_label" translate="false">ccmni2 information</string>
    <string name="wlan_info_label" translate="false">wlan information (valid only if Wi-Fi is on)</string>
    <string name="wifi_update" translate="false">Refresh Status</string>
    <string name="wifi_state_label" translate="false">Wi-Fi state:</string>
    <string name="network_state_label" translate="false">Network state:</string>
    <string name="supplicant_state_label" translate="false">Supplicant state:</string>
    <string name="rssi_label" translate="false">RSSI:</string>
    <string name="bssid_label" translate="false">BSSID:</string>
    <string name="ssid_label" translate="false">SSID:</string>
    <string name="hidden_ssid_label" translate="false">Hidden SSID:</string>
    <string name="ipaddr_label" translate="false">IPaddr:</string>
    <string name="macaddr_label" translate="false">MAC addr:</string>
    <string name="networkid_label" translate="false">Network ID:</string>
    <string name="link_speed_label" translate="false">Link speed:</string>
    <string name="scan_list_label" translate="false">Scan results:</string>
    <string name="mac_edit_label" translate="false">Random MAC Address:</string>
    <string name="mac_update" translate="false">Update Mac</string>
    <string name="system_property_label" translate="false">System properties:</string>
    <string name="poorlink_profiling_on">Poor Link Profiling on screen</string>
    <string name="poorlink_enable_on">Avoid Poor Connections</string>
    <string name="poorlink_detect_good_threshold" translate="false">Good Link Threshold</string>
    <string name="poorlink_detect_bad_threshold" translate="false">Poor Link Threshold</string>
    <string name="poorlinkupdate" translate="false">Update Poor Link</string>
    <string name="wifi_capability" translate="false">Wi-Fi Capability:</string>
    <string name="poorlink_detect_rssi_threshold" translate="false">RSSI Threshold</string>
    <string name="poorlink_detect_linkspeed_threshold" translate="false">LinkSpeed Threshold</string>
    <string name="batched_scan_start">Start Batched Scan</string>
    <string name="batched_scan_stop">Stop Batched Scan</string>
    <string name="batched_scan_poll">Poll Batched Scan</string>
    <string name="batched_scan_max_scan">Max Scan Per Batch</string>
    <string name="batched_scan_max_ap_scan">Max Ap Per Scan</string>
    <string name="batched_scan_channel">Channel Set</string>
    <string name="batched_scan_scan_interval">Scan Interval Sec</string>
    <string name="batched_scan_max_ap_distance">Max Ap For Distance</string>
    <string name="batched_scan_list_label" translate="false">Batched Scan results:</string>
    <string name="wifi_state_disabling" translate="false">Disabling</string>
    <string name="wifi_state_disabled" translate="false">Disabled</string>
    <string name="wifi_state_enabling" translate="false">Enabling</string>
    <string name="wifi_state_enabled" translate="false">Enabled</string>
    <string name="wifi_state_unknown" translate="false">Unknown</string>
    <string name="na_string" translate="false">N/A</string>
    <string name="unknown_string" translate="false">Unknown</string>
    <string name="loading_string" translate="false">Loading</string>
    <string name="wifi_p2p_channel_connected" translate="false">Channel connected:</string>
    <string name="wifi_p2p_mac" translate="false">P2p MAC:</string>
    <string name="wifi_p2p_device_name" translate="false">Device name:</string>
    <string name="wifi_p2p_listen_mode" translate="false">Enable listen mode</string>
    <string name="wifi_p2p_autonomous_go" translate="false">Enable Auto GO</string>
    <string name="wifi_p2p_wfd_wps" translate="false">WPS configuration for WiFi-Display:</string>
    <string name="wifi_p2p_wfd_wps_default" translate="false">Default</string>
    <string name="wifi_p2p_wfd_wps_pbc" translate="false">PBC</string>
    <string name="wifi_p2p_wfd_wps_keypad" translate="false">KEYPAD</string>
    <string name="wifi_p2p_wfd_wps_display" translate="false">DISPLAY</string>
    <string name="wifi_p2p_setting_wps" translate="false">WPS configuration for WiFiP2pSetting:</string>
    <string name="wifi_p2p_setting_wps_default" translate="false">Default</string>
    <string name="wifi_p2p_setting_wps_pbc" translate="false">PBC</string>
    <string name="wifi_p2p_setting_wps_keypad" translate="false">KEYPAD</string>
    <string name="wifi_p2p_setting_wps_label" translate="false">LABEL</string>
    <string name="wifi_p2p_setting_wps_display" translate="false">DISPLAY</string>
    <string name="wifi_p2p_listen_channel" translate="false">Listen channel:</string>
    <string name="wifi_p2p_listen_channel_auto" translate="false">Auto</string>
    <string name="wifi_p2p_listen_channel_1" translate="false">channel 1</string>
    <string name="wifi_p2p_listen_channel_6" translate="false">channel 6</string>
    <string name="wifi_p2p_listen_channel_11" translate="false">channel 11</string>
    <string name="wifi_p2p_operation_channel" translate="false">Operating channel:</string>
    <string name="wifi_p2p_operation_channel_auto" translate="false">Auto</string>
    <string name="wifi_p2p_operation_channel_1" translate="false">channel 1</string>
    <string name="wifi_p2p_operation_channel_6" translate="false">channel 6</string>
    <string name="wifi_p2p_operation_channel_11" translate="false">channel 11</string>
    <string name="wifi_p2p_operation_channel_36" translate="false">channel 36</string>
    <string name="wifi_p2p_stability_test" translate="false">Stability Test:\n(1)please refer to scan result above then input the MAC of peer device.\n(2)DUT and Testbed SHOULD not screen lock and screen-off</string>
    <string name="wifi_p2p_ST_do" translate="false">do stability test</string>
    <string name="wifi_p2p_state" translate="false">Wi-Fi P2p State:</string>
    <string name="wifi_p2p_network_state" translate="false">Network state:</string>
    <string name="wifi_p2p_role" translate="false">Role:</string>
    <string name="wifi_p2p_myself_IP" translate="false">IP myself:</string>
    <string name="wifi_p2p_scan_result" translate="false">Scan results:</string>
    <string name="wifi_p2p_persistent_group" translate="false">Persistent group list:</string>
    <string name="wifi_p2p_link_info" translate="false">Link info:</string>
    <string name="wifi_p2p_detail_info" translate="false">Detailed information:</string>
    <string name="wifi_p2p_peer_ip_mac" translate="false">Peer IP/MAC(s):</string>
    <string name="wifi_p2p_fast_connect" translate="false">Fast Connection Test:\n(please make GO and GC connect to the same AP first!)</string>
    <string name="wifi_p2p_fast_connect_step0" translate="false">Step(0): which role you are being?</string>
    <string name="wifi_p2p_FC_GO" translate="false">GO/Receiver</string>
    <string name="wifi_p2p_FC_GC" translate="false">GC/Sender</string>
    <string name="wifi_p2p_fast_connect_step1" translate="false">Step(1): showing the connection status</string>
    <string name="wifi_p2p_FC_do" translate="false">do fast connrct</string>
    <string name="wifi_p2p_fast_connect_step2" translate="false">Step(2): disconnecting the connection</string>
    <string name="wifi_p2p_FC_disconnect" translate="false">disconnect fast connrct</string>
    <string name="wifi_p2p_NIC_statistics" translate="false">NIC statistics:</string>
    <string name="wifi_p2p_EM_version" translate="false">Wi-Fi P2p EM Version:</string>
</resources>