<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <LinearLayout style="@style/info_layout">
      
        <!-- version -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_EM_version" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_EM_version_value" style="@style/info_state_value" />        
        </LinearLayout>

        <!-- state -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_state" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_state_value" style="@style/info_state_value" />        
        </LinearLayout>

        <!-- device name -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_device_name" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_device_name_value" style="@style/info_state_value" />        
        </LinearLayout>
        
        <!-- MAC -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_mac" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_mac_value" style="@style/info_state_value" />        
        </LinearLayout>

        <!-- detail info -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_detail_info" style="@style/info_label" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_p2p_detail_info_value" style="@style/info_value" />        
        </LinearLayout>
        
        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

        <!-- network state -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_network_state" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_network_state_value" style="@style/info_state_value" />        
        </LinearLayout>
        
        <!-- role -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_role" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_role_value" style="@style/info_state_value" />        
        </LinearLayout>
                
        <!-- channel connected -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_channel_connected" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_channel_connected_value" style="@style/info_state_value" />        
        </LinearLayout>
        
        <!-- IPaddr myself -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_myself_IP" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_myself_IP_value" style="@style/info_state_value" />        
        </LinearLayout>

        <!-- peer IP/MAC -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_peer_ip_mac" style="@style/info_label" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_p2p_peer_ip_mac_value" style="@style/info_value" />        
        </LinearLayout>

        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

        <!-- is scanning 
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_scan_state" style="@style/info_label" />
            <TextView android:id="@+id/wifi_p2p_scan_state_value" style="@style/info_state_value" />        
        </LinearLayout>
        -->
        
        <!-- scan result -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_scan_result" style="@style/info_label" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_p2p_scan_result_value" style="@style/info_value" />
        </LinearLayout>
        
        <!-- persistent group list -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_persistent_group" style="@style/info_label" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_p2p_persistent_group_value" style="@style/info_value" />
        </LinearLayout>

        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

        <!-- fast connect -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_fast_connect" style="@style/info_label" />
        </LinearLayout>

        <!-- step 0 -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_fast_connect_step0" style="@style/info_state_value" />
        </LinearLayout>

        <RadioGroup android:id="@+id/wifi_p2p_FC_step0_group" 
             android:orientation="vertical"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             >
             
             <RadioButton android:id="@+id/wifi_p2p_FC_GO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_FC_GO" />

             <RadioButton android:id="@+id/wifi_p2p_FC_GC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_FC_GC" />
        </RadioGroup>

        <LinearLayout style="@style/entry_layout">
            <EditText
                android:id="@+id/wifi_p2p_FC_GO_wlan_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPhonetic">
                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <Button android:id="@+id/wifi_p2p_FC_do"
                android:textSize="14sp"
                android:layout_marginTop="8dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_FC_do"
                />
        </LinearLayout>
    
        <!-- step 1 -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_fast_connect_step1" style="@style/info_state_value" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_p2p_FC_result" style="@style/info_value" />
        </LinearLayout>

         <!-- step 2 -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_fast_connect_step2" style="@style/info_state_value" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <Button android:id="@+id/wifi_p2p_FC_disconnect"
                android:textSize="14sp"
                android:layout_marginTop="8dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_FC_disconnect"
                />
        </LinearLayout>
         
        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

        <!-- interface statistics -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_NIC_statistics" style="@style/info_label" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_NIC_statistics_value" style="@style/info_value" />        
        </LinearLayout>
  
        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
        
        <!-- link score -->
        <LinearLayout style="@style/entry_layout">
        <CheckBox
            android:id="@+id/wifi_p2p_link_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/wifi_p2p_link_info" />
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_p2p_link_info_value" style="@style/info_value" />   
        </LinearLayout>

        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
        
        <!-- listen mode -->
        <LinearLayout style="@style/entry_layout">
        <CheckBox
            android:id="@+id/wifi_p2p_listen_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/wifi_p2p_listen_mode" />
        </LinearLayout>

        <!-- auto GO -->
        <LinearLayout style="@style/entry_layout">
        <CheckBox
            android:id="@+id/wifi_p2p_autonomous_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/wifi_p2p_autonomous_go" />
        </LinearLayout>

        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

        <!-- WPS configuration for wifidisplay -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_wfd_wps" style="@style/info_label" />
        </LinearLayout>

        <RadioGroup android:id="@+id/wifi_p2p_wfd_wps_radio_group" 
             android:orientation="vertical"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             >
             
             <RadioButton android:id="@+id/wifi_p2p_wfd_wps_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_wfd_wps_default" />

             <RadioButton android:id="@+id/wifi_p2p_wfd_wps_pbc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_wfd_wps_pbc" />
                
             <RadioButton android:id="@+id/wifi_p2p_wfd_wps_keypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_wfd_wps_keypad" />

             <RadioButton android:id="@+id/wifi_p2p_wfd_wps_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_wfd_wps_display" />
        </RadioGroup>

        <!-- WPS configuration for wifip2psetting -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_setting_wps" style="@style/info_label" />
        </LinearLayout>

        <RadioGroup android:id="@+id/wifi_p2p_setting_wps_radio_group" 
             android:orientation="vertical"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             >
             
             <RadioButton android:id="@+id/wifi_p2p_setting_wps_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_setting_wps_default" />

             <RadioButton android:id="@+id/wifi_p2p_setting_wps_pbc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_setting_wps_pbc" />
                
             <RadioButton android:id="@+id/wifi_p2p_setting_wps_keypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_setting_wps_keypad" />

             <RadioButton android:id="@+id/wifi_p2p_setting_wps_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_setting_wps_display" />

             <RadioButton android:id="@+id/wifi_p2p_setting_wps_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_setting_wps_label" />
        </RadioGroup>

        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

        <!-- Listen channel -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_listen_channel" style="@style/info_label" />
        </LinearLayout>

        <RadioGroup android:id="@+id/wifi_p2p_listen_channel_radio_group" 
             android:orientation="vertical"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             >
             
             <RadioButton android:id="@+id/wifi_p2p_listen_channel_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_listen_channel_auto"
                android:checked="true" />

             <RadioButton android:id="@+id/wifi_p2p_listen_channel_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_listen_channel_1" />
                
             <RadioButton android:id="@+id/wifi_p2p_listen_channel_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_listen_channel_6" />

             <RadioButton android:id="@+id/wifi_p2p_listen_channel_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_listen_channel_11" />
        </RadioGroup>

        <!-- Operation channel -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_operation_channel" style="@style/info_label" />
        </LinearLayout>

        <RadioGroup android:id="@+id/wifi_p2p_operation_channel_radio_group" 
             android:orientation="vertical"
             android:layout_width="fill_parent" 
             android:layout_height="fill_parent" 
             >
             
             <RadioButton android:id="@+id/wifi_p2p_operation_channel_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_operation_channel_auto" 
                android:checked="true" />

             <RadioButton android:id="@+id/wifi_p2p_operation_channel_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_operation_channel_1" />
                
             <RadioButton android:id="@+id/wifi_p2p_operation_channel_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_operation_channel_6" />

             <RadioButton android:id="@+id/wifi_p2p_operation_channel_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_operation_channel_11" />

             <RadioButton android:id="@+id/wifi_p2p_operation_channel_36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_operation_channel_36" />
        </RadioGroup>
        
        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
        
        <!-- stability test -->
        <LinearLayout style="@style/entry_layout">
            <TextView android:text="@string/wifi_p2p_stability_test" style="@style/info_label" />
        </LinearLayout>

        <LinearLayout style="@style/entry_layout">
            <EditText
                android:id="@+id/wifi_p2p_ST_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textCapCharacters">
                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout style="@style/entry_layout">
            <Button android:id="@+id/wifi_p2p_ST_do"
                android:textSize="14sp"
                android:layout_marginTop="8dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_p2p_ST_do"
                />
        </LinearLayout>

        <LinearLayout style="@style/entry_layout">
            <TextView android:id="@+id/wifi_p2p_ST_statistics" style="@style/info_state_value" />        
        </LinearLayout>
    </LinearLayout>

</ScrollView>